fix(#11): align hero description

--- a/src/components/sections/hero/hero.module.css
+++ b/src/components/sections/hero/hero.module.css
@@ -31,11 +31,12 @@
   grid-template-columns: auto 1fr;
   column-gap: 166px;
   z-index: 1;
+  
 }
 
 .hero_content__proportional {
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 0;
+  column-gap: 20px;
 }
 
 .hero_title {
